# dais2

./: Cargo.toml
data_generation/: Cargo.toml
data_generation/src/: main.rs
data_generation/src/entities/: generators.rs
src/: entities.rs  main.rs
src/entities/: generators.rs  mod.rs
