[package]
name = "orm_data_generation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version="2.4", features=['http', 'chrono'] }
postgres = "0.19.1"
rand="0.8"
rust_decimal = { version="1.16", features=['db-postgres'] }